--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,7 +7,7 @@ $font: (
 
 // Palette.
 $palette: (
-  charcoal:          #272c30,
+  charcoal:          #282828,
   charcoal-light-3:  lighten(#272c30, 3%),
   charcoal-light-7:  lighten(#272c30, 7%),
   charcoal-light-15: lighten(#272c30, 15%),
@@ -16,8 +16,8 @@ $palette: (
   charcoal-light-60: lighten(#272c30, 60%),
   charcoal-light-75: lighten(#272c30, 75%),
   charcoal-light-80: lighten(#272c30, 80%),
-  charcoal-dark-15:  darken(#272c30, 15%),
-  accent:            #d8195e,
+  charcoal-dark-15:  darken(#282828, 15%),
+  accent:            #db2028,
   accent-blue:       #0c8aea,
   accent-green:      #0da5b1,
   accent-violet:     #7c43a8,
